# latin-n-gram-viewer

./: CC-BY-SA-3.0-US-LICENSE.txt  CC-BY-SA-3.0-US-Legal-Code.txt  LICENSE.txt  README.md  frequency.py  pyproject.toml
static/css/: bootstrap-grid.css  bootstrap-grid.min.css  bootstrap-reboot.css  bootstrap-reboot.min.css  bootstrap.css  dashboard.css
static/js/src/: dropdown.js  modal.js  tooltip.js
static/js/tests/unit/: modal.js  popover.js  tooltip.js
static/js/tests/visual/: alert.html  button.html  carousel.html  collapse.html  dropdown.html  modal.html  popover.html  scrollspy.html  tab.html  tooltip.html
static/scss/: _badge.scss  _forms.scss  _input-group.scss  _list-group.scss  _navbar.scss  _reboot.scss  bootstrap-reboot.scss
templates/: dash.html  results.html
